@@ -31,6 +31,7 @@ https://github.com/elastic/apm-agent-python/compare/v1.0.0\...master[Check the H
      to `ELASTIC_APM_SERVICE_NAME`.
  ** `app_name` arguments to API calls in the whole code base changed to `service_name`.
  ** `context.request.url.raw` has been renamed to `context.request.url.full` ({pull}121[#121])
+ * BREAKING: added `elasticapm.set_custom_context` in favor of the more generic `set_custom_data` function ({pull}133[#133])
 
 [[release-1.0.0]]
 [float]
